--- a/app/views/bill.html
+++ b/app/views/bill.html
@@ -1,46 +1,17 @@
 
-  <!-- ****************** NAVBAR ****************** -->
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">PoliPie</a>
-      </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+  <div class="main" ng-controller="SingleBillController">
+          <!-- ****************** NAVBAR ****************** -->
+  <nav class="header-section">
+    <img src="../img/logo.png">
   </nav>
   <!-- ******************* ENDS NAV-BAR ******************* -->
-  <div ng-controller="BillCtrl">
    <div class="bills-name-section">
-      <div class="left-x">
-        <span>&nbsp;</span>
-      </div> <!-- end of div.left-arrow -->
+
       <div class="bills-info">
-        <h1> {{billName}} </h1>
+        <h1> {{singleBill.title}} </h1>
       </div> <!-- end of div.candidate-info -->
 
-      <div class="right-x">
-        <span>X</span>
-      </div> <!-- end of div.right-arrow -->
     </div> <!-- end of div.candidate-section -->
 
   <div class="container">
@@ -50,18 +21,17 @@
     <div class="desktop-left-section">
 
       <div class="bill-description-desktop">
-        <h1> Description: </h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat. Curabitur euismod pellentesque massa, a egestas turpis pharetra quis.
+        <h1> Summary: </h1>
+        <p>{{singleBill.summary}}
         </p>
       </div> <!-- end of div.candidate-committees -->
 
       <div class="candidate-list-section-desktop">
         <h1> Candidate's Supporting</h1>
         <ul>
-          <a href="#"><li>Kingtak Atak<span>></span></li></a>
-          <a href="#"><li>Tyler Smyler<span>></span></li></a>
-          <a href="#"><li>Derek Merek<span>></span></li></a>
-          <a href="#"><li>Ray Nostay<span>></span></li></a>
+          <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">
+            {{ bill.id }}
+          </li>
         </ul>
       </div> <!-- end of div.bills-sponsored-section -->
 
@@ -70,13 +40,13 @@
 
     <div class="desktop-right-section">
       <div class="bill-industry-influence-section">
-        <h1>Monetary Influence (by Industry) </h1>
+        <h1>Monetary Influence (by Contributor Type) </h1>
         <div ng-controller="InudstryCtrl" class="influence-graph-section">
           <div class="pie-chart" pchart></div>
         </div> <!-- end of div.influence-graph-section -->
       </div> <!-- end of div.industry-influence-section -->
       <div class="bill-industry-description">
-        <p>Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna. Aliquam dui diam, laoreet eu lacus ut, suscipit commodo quam. Vestibulum vehicula suscipit mauris, id pellentesque turpis ullamcorper quis. Etiam suscipit turpis dui, ut imperdiet mi euismod at. Praesent eget feugiat velit. Fusce eu ultricies tortor. Nam quis nisi ante. Praesent eget volutpat odio.
+        <p>The chart above represents the aggregate amount of contributions for all candidates who supported this bill.
         </p>
       </div> <!-- end of div.bill-page-industry-description -->
       <div class="bill-description-mobile">
@@ -98,16 +68,4 @@
 
   </div> <!-- end of BillCtrl -->
 
-  <footer class="footer">
-      <ul>
-        <li>About</li>
-        <li>|</li>
-        <li>API</li>
-      </ul>
-      <h2>What industry sectors influence bills being passed?</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat.
-      <br />
-      Curabitur euismod pellentesque massa, a egestas turpis pharetra quis. Nullam non congue purus. Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna.
-      </p>
 
-  </footer>
