--- a/app/views/candidates.html
+++ b/app/views/candidates.html
@@ -1,48 +1,26 @@
-<!-- ****************** NAVBAR ****************** -->
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button> -->
-      <a class="navbar-brand" href="#">PoliPie</a>
-    </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-      </ul>
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      </ul> -->
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<!-- ******************* ENDS NAV-BAR ******************* -->
-<div ng-controller="MainCtrl">
+  <div class="main" ng-controller="MainCtrl">
+
+      <!-- ****************** NAVBAR ****************** -->
+  <nav class="header-section">
+    <img src="img/logo.png">
+  </nav>
+  <!-- ******************* ENDS NAV-BAR ******************* -->
+
   <div class="candidate-section">
 
-    <div class="left-arrow">
-      <button ng-click="back()">&laquo;</button>
-    </div> <!-- end of div.left-arrow -->
-
-      <div class="candidate-info">
-        <h1> {{ firstName }} {{ lastName }} </h1>
-        <h2> {{ party }} </h2>
-      </div> <!-- end of div.candidate-info -->
-
-    <div class="right-arrow">
-      <button ng-click='forward()'>&raquo;</button>
-    </div> <!-- end of div.right-arrow -->
+      <div class="left-arrow menu-arrow">
+        <img src="img/left.png" ng-click="back()">
+      </div> <!-- end of div.left-arrow -->
+      
+        <div class="candidate-info">
+          <h1> {{ firstName }} {{ lastName }} </h1>
+          <h2> {{ party }} </h2>
+        </div> <!-- end of div.candidate-info -->
+      
+      <div class="right-arrow menu-arrow">
+        <img src="img/right.png" ng-click='forward()'>
+      </div> <!-- end of div.right-arrow -->
 
 
   </div> <!-- end of div.candidate-section -->
@@ -111,14 +89,4 @@
   </div> <!-- end of div.container -->
 
 </div> <!-- end of MainCtrl -->
-  <footer class="footer">
-    <ul>
-      <li>About | API</li>
-    </ul>
-    <h2>What industry sectors influence bills being passed?</h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget mi vehicula, gravida risus non, laoreet elit. Ut fermentum convallis luctus. Pellentesque laoreet ante vitae ornare dapibus. Sed fermentum felis quis sem convallis, et viverra nisi placerat.
-    <br />
-    Curabitur euismod pellentesque massa, a egestas turpis pharetra quis. Nullam non congue purus. Fusce a risus non orci sodales scelerisque non sit amet nisi. Vestibulum urna purus, interdum id ligula in, vehicula varius risus. Fusce ac interdum magna.
-    </p>
 
-</footer>
