--- a/app/css/style.css
+++ b/app/css/style.css
@@ -317,65 +317,62 @@ li {
     float: left;
     width: 80%;
     display: block;
+    background-color: #bdbdbd;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    margin-bottom: 40px;
     -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
     box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
   }
-  /* line 316, ../../sass/style.scss */
+  /* line 321, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop h1 {
-    background-color: #bdbdbd;
+    background-color: #7E7C7D;
+    margin: 0;
+    padding: 20px 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    font-size: 1.2em;
   }
-  /* line 320, ../../sass/style.scss */
+  /* line 330, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop ul {
-    padding-left: 0;
-    font-size: 1.5em;
-    background-color: lightgray;
-    line-height: 1em;
+    padding: 0px 20px 0 20px;
+    background-color: #bdbdbd;
+    margin-bottom: 0;
   }
-  /* line 327, ../../sass/style.scss */
+  /* line 339, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop li {
-    padding-left: 15px;
     list-style-type: none;
-    border-top: 1px solid #bdbdbd;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    padding: 10px 0 10px 0;
   }
-  /* line 332, ../../sass/style.scss */
-  .desktop-left-section .candidate-list-section-desktop li span {
-    float: right;
-    font-size: 1.5em;
-    vertical-align: middle;
-    line-height: 1.3em;
-    padding-right: 15px;
-  }
-  /* line 341, ../../sass/style.scss */
-  .desktop-left-section .candidate-list-section-desktop a {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.5);
+  /* line 344, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop li:first-child {
+    padding-top: 10px;
   }
   /* line 348, ../../sass/style.scss */
-  .desktop-left-section .candidate-list-section-desktop a:hover li {
-    background-color: darkgray;
+  .desktop-left-section .candidate-list-section-desktop li:last-child {
+    border-bottom: none;
   }
 }
 
-/* line 357, ../../sass/style.scss */
+/* line 358, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 357, ../../sass/style.scss */
+  /* line 358, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 700px;
   }
 }
-/* line 365, ../../sass/style.scss */
+/* line 366, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: #bdbdbd;
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 371, ../../sass/style.scss */
+/* line 372, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section h1 {
   padding: 20px;
   background-color: #7E7C7D;
@@ -384,7 +381,7 @@ li {
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 @media only screen and (min-width: 950px) {
-  /* line 365, ../../sass/style.scss */
+  /* line 366, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
     margin-bottom: 40px;
@@ -393,29 +390,29 @@ li {
     box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
   }
 }
-/* line 387, ../../sass/style.scss */
+/* line 388, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph-section {
   height: 300px;
 }
-/* line 390, ../../sass/style.scss */
+/* line 391, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph-section .line-chart {
   width: 100%;
   height: 300px;
   margin: 0 auto;
 }
 @media only screen and (min-width: 950px) {
-  /* line 390, ../../sass/style.scss */
+  /* line 391, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section .contributions-graph-section .line-chart {
     width: 700px;
   }
 }
-/* line 403, ../../sass/style.scss */
+/* line 404, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   background-color: #bdbdbd;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 408, ../../sass/style.scss */
+/* line 409, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section h1 {
   background-color: #7E7C7D;
   padding: 20px;
@@ -423,7 +420,7 @@ li {
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 @media only screen and (min-width: 950px) {
-  /* line 403, ../../sass/style.scss */
+  /* line 404, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
     border: 1px solid rgba(0, 0, 0, 0.5);
@@ -432,29 +429,29 @@ li {
     box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
   }
 }
-/* line 425, ../../sass/style.scss */
+/* line 426, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section {
   height: 300px;
 }
-/* line 428, ../../sass/style.scss */
+/* line 429, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
   width: 100%;
   height: 300px;
   margin: 0 auto;
 }
 @media only screen and (min-width: 950px) {
-  /* line 428, ../../sass/style.scss */
+  /* line 429, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
     width: 700px;
   }
 }
-/* line 440, ../../sass/style.scss */
+/* line 441, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   background-color: #bdbdbd;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 445, ../../sass/style.scss */
+/* line 446, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   background-color: #7E7C7D;
   padding: 20px;
@@ -462,7 +459,7 @@ li {
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 @media only screen and (min-width: 950px) {
-  /* line 440, ../../sass/style.scss */
+  /* line 441, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
     border: 1px solid rgba(0, 0, 0, 0.5);
@@ -471,113 +468,113 @@ li {
     box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
   }
 }
-/* line 462, ../../sass/style.scss */
+/* line 463, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section {
   height: 300px;
 }
-/* line 465, ../../sass/style.scss */
+/* line 466, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
   width: 100%;
   height: 300px;
   margin: 0 auto;
 }
 @media only screen and (min-width: 950px) {
-  /* line 465, ../../sass/style.scss */
+  /* line 466, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
     width: 700px;
   }
 }
-/* line 477, ../../sass/style.scss */
+/* line 478, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: darkgray;
   padding: 30px;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 477, ../../sass/style.scss */
+  /* line 478, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
   }
 }
-/* line 487, ../../sass/style.scss */
+/* line 488, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   padding: 30px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 487, ../../sass/style.scss */
+  /* line 488, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 496, ../../sass/style.scss */
+/* line 497, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: #7E7C7D;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 500, ../../sass/style.scss */
+/* line 501, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   margin: 0;
 }
-/* line 507, ../../sass/style.scss */
+/* line 508, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile ul {
   margin: 0 auto;
   font-size: 1em;
   background-color: #bdbdbd;
   text-align: center;
 }
-/* line 514, ../../sass/style.scss */
+/* line 515, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li {
   list-style-type: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   padding: 10px 0 10px 0;
 }
-/* line 519, ../../sass/style.scss */
+/* line 520, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li span {
   font-size: 1.5em;
   vertical-align: middle;
   line-height: 1.3em;
 }
-/* line 526, ../../sass/style.scss */
+/* line 527, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 533, ../../sass/style.scss */
+/* line 534, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 496, ../../sass/style.scss */
+  /* line 497, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 543, ../../sass/style.scss */
+/* line 544, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
 }
-/* line 546, ../../sass/style.scss */
+/* line 547, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 551, ../../sass/style.scss */
+/* line 552, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 558, ../../sass/style.scss */
+/* line 559, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid #bdbdbd;
 }
-/* line 563, ../../sass/style.scss */
+/* line 564, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -585,62 +582,62 @@ li {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 572, ../../sass/style.scss */
+/* line 573, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 579, ../../sass/style.scss */
+/* line 580, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 543, ../../sass/style.scss */
+  /* line 544, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 @media only screen and (min-width: 950px) {
-  /* line 543, ../../sass/style.scss */
+  /* line 544, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 594, ../../sass/style.scss */
+/* line 595, ../../sass/style.scss */
 .full-container {
   background-color: black;
   min-height: 100%;
 }
 
-/* line 599, ../../sass/style.scss */
+/* line 600, ../../sass/style.scss */
 .footer-section {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 604, ../../sass/style.scss */
+/* line 605, ../../sass/style.scss */
 .footer-section h1 {
   text-align: center;
   padding-top: 20px;
   margin: 0;
 }
-/* line 610, ../../sass/style.scss */
+/* line 611, ../../sass/style.scss */
 .footer-section h2 {
   padding: 0 20px 0 20px;
   text-align: center;
 }
-/* line 615, ../../sass/style.scss */
+/* line 616, ../../sass/style.scss */
 .footer-section p {
   padding: 0 20px 20px 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 620, ../../sass/style.scss */
+  /* line 621, ../../sass/style.scss */
   .footer-section h2 {
     padding: 30px 100px 0 100px;
     text-align: left;
   }
-  /* line 625, ../../sass/style.scss */
+  /* line 626, ../../sass/style.scss */
   .footer-section p {
     padding: 0 100px 100px 100px;
   }
