--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,7 +49,7 @@ li {
     padding: 0 !important;
     margin: 0 !important;
     width: 100%;
-    
+
 
     @media only screen and (min-width: 950px) {
         padding: 0 0 50px 0 !important;
@@ -309,45 +309,46 @@ li {
             float: left;
             width: 80%;
             display: block;
+            background-color: #bdbdbd;
+            border: 1px solid rgba(0,0,0,.5);
+            margin-bottom: 40px;
             -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
             -moz-box-shadow:    1px 0px 20px 5px rgba(0, 0, 0, 0.3);
             box-shadow:         1px 0px 20px 5px rgba(0, 0, 0, 0.3);
 
+
+
             h1 {
-                background-color: #bdbdbd;
+                background-color: #7E7C7D;
+                margin: 0;
+                padding: 20px 20px;
+                border-bottom: 1px solid rgba(0,0,0,.5);
+                font-size: 1.2em;
+
             }
 
             ul {
-                padding-left: 0;
-                font-size: 1.5em;
-                background-color: lightgray;
-                line-height: 1em;
+                padding: 0px 20px 0 20px;
+                background-color: #bdbdbd;
+                margin-bottom: 0;
+
+
+
             }
 
             li {
-                padding-left: 15px;
                 list-style-type: none;
-                border-top: 1px solid #bdbdbd;
+                border-bottom: 1px solid rgba(0,0,0,.5);
+                padding: 10px 0 10px 0;
 
-                span {
-                    float: right;
-                    font-size: 1.5em;
-                    vertical-align: middle;
-                    line-height: 1.3em;
-                    padding-right: 15px;
+                &:first-child {
+                    padding-top: 10px;
                 }
-            }
 
-            a {
-                text-decoration: none;
-                color: rgba(0,0,0,.5);
-            }
-
-            a:hover {
-
-                li {
-                    background-color: darkgray;
+                &:last-child {
+                    border-bottom: none;
                 }
+
             }
         }
     }
