--- a/app/views/bill.html
+++ b/app/views/bill.html
@@ -1,6 +1,6 @@
 
 
-  <div class="main" ng-controller="SingleBillController">
+  <div class="main" >
           <!-- ****************** NAVBAR ****************** -->
   <nav class="header-section">
     <img src="../img/logo.png">
@@ -41,7 +41,7 @@
     <div class="desktop-right-section">
       <div class="bill-industry-influence-section">
         <h1>Monetary Influence (by Contributor Type) </h1>
-        <div ng-controller="InudstryCtrl" class="influence-graph-section">
+        <div class="influence-graph-section">
           <div class="pie-chart" pchart></div>
         </div> <!-- end of div.influence-graph-section -->
       </div> <!-- end of div.industry-influence-section -->
