--- a/app/views/candidates.html
+++ b/app/views/candidates.html
@@ -49,7 +49,7 @@
 
         <ul>
           <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">
-            {{ bill.id }}
+            {{ bill.id }} 
           </li>
         </ul>
       </div> <!-- end of div.bills-sponsored-section-desktop -->
@@ -77,7 +77,7 @@
         <h1> Bills Sponsored</h1>
 
         <ul>
-          <li ng-repeat="bill in bills">{{ bill.id }}</li>
+          <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">{{ bill.id }} <br />{{ bill.title }}</li>
         </ul>
 
 
