joined SingleBillController with MainCtrl

--- a/app/views/bill.html
+++ b/app/views/bill.html
@@ -1,6 +1,6 @@
 
 
-  <div class="main" ng-controller="SingleBillController">
+  <div class="main">
           <!-- ****************** NAVBAR ****************** -->
   <nav class="header-section">
     <img src="../img/logo.png" ng-click="enter()">
@@ -29,9 +29,9 @@
       <div class="candidate-list-section-desktop">
         <h1> Candidate's Supporting</h1>
         <ul>
-          <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">
+<!--           <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">
             {{ bill.id }}
-          </li>
+          </li> -->
 
         </ul>
       </div> <!-- end of div.bills-sponsored-section -->
