--- a/app/views/candidates.html
+++ b/app/views/candidates.html
@@ -77,7 +77,7 @@
         <h1> Bills Sponsored</h1>
 
         <ul>
-          <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">{{ bill.id }} <br />{{ bill.title }}</li>
+          <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)"><span class="bold">{{ bill.id }}</span> <br /> {{ bill.title }}</li>
         </ul>
 
 
