Got line graph displaying.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -646,3 +646,19 @@ button:focus {
     padding: 0 100px 100px 100px;
   }
 }
+
+.contributions-graph{height:500px;}
+
+path { 
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
