--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,9 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300');
 
+.cleardiv {
+    clear: both;
+}
+
 html,
 body {
     background-color: black;
@@ -15,10 +19,6 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-.cleardiv {
-    clear: both;
 }
 
 
@@ -74,7 +74,7 @@ li {
 
 .candidate-section {
     text-align: center;
-    line-height: 100px;
+    padding: 20px;
 
     .left-arrow {
         vertical-align: middle;
@@ -374,6 +374,7 @@ li {
 
     @media only screen and (min-width: 950px) {
         display: inline-block;
+        float: right;
         width: 700px;
     }
 
@@ -438,11 +439,11 @@ li {
         }
 
         .influence-graph-section {
-            height: 300px;
+            height: 400px;
 
             .pie-chart {
                 width: 100%;
-                height: 300px;
+                height: 400px;
                 margin: 0 auto;
 
                 @media only screen and (min-width: 950px) {
@@ -475,11 +476,9 @@ li {
         }
 
         .influence-graph-section {
-            height: 300px;
 
             .pie-chart {
                 width: 100%;
-                height: 300px;
                 margin: 0 auto;
 
                 @media only screen and (min-width: 950px) {
