--- a/app/css/style.css
+++ b/app/css/style.css
@@ -406,17 +406,17 @@ li {
 }
 /* line 403, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph-section {
-  height: 300px;
+  height: 600px;
 }
 /* line 406, ../../sass/style.scss */
-.desktop-right-section .campaign-contributions-section .contributions-graph-section .line-chart {
+.desktop-right-section .campaign-contributions-section .contributions-graph-section .contributions-graph {
   width: 100%;
-  height: 300px;
+  height: 500px;
   margin: 0 auto;
 }
 @media only screen and (min-width: 950px) {
   /* line 406, ../../sass/style.scss */
-  .desktop-right-section .campaign-contributions-section .contributions-graph-section .line-chart {
+  .desktop-right-section .campaign-contributions-section .contributions-graph-section .contributions-graph {
     width: 700px;
   }
 }
@@ -457,15 +457,16 @@ li {
   /* line 444, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
     width: 700px;
+    margin: 0 auto;
   }
 }
-/* line 456, ../../sass/style.scss */
+/* line 457, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   background-color: #bdbdbd;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 461, ../../sass/style.scss */
+/* line 462, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   background-color: #7E7C7D;
   padding: 20px;
@@ -473,7 +474,7 @@ li {
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 @media only screen and (min-width: 950px) {
-  /* line 456, ../../sass/style.scss */
+  /* line 457, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
     border: 1px solid rgba(0, 0, 0, 0.5);
@@ -482,25 +483,25 @@ li {
     box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
   }
 }
-/* line 480, ../../sass/style.scss */
+/* line 481, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
   width: 100%;
   margin: 0 auto;
 }
 @media only screen and (min-width: 950px) {
-  /* line 480, ../../sass/style.scss */
+  /* line 481, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
     width: 700px;
   }
 }
-/* line 491, ../../sass/style.scss */
+/* line 492, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: #7E7C7D;
   padding: 20px;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 491, ../../sass/style.scss */
+  /* line 492, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
     border-left: 1px solid rgba(0, 0, 0, 0.5);
@@ -508,85 +509,85 @@ li {
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   }
 }
-/* line 504, ../../sass/style.scss */
+/* line 505, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   padding: 30px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 504, ../../sass/style.scss */
+  /* line 505, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 513, ../../sass/style.scss */
+/* line 514, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: #7E7C7D;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 517, ../../sass/style.scss */
+/* line 518, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   margin: 0;
 }
-/* line 524, ../../sass/style.scss */
+/* line 525, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile ul {
   margin: 0 auto;
   font-size: 1em;
   background-color: #bdbdbd;
   text-align: center;
 }
-/* line 531, ../../sass/style.scss */
+/* line 532, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li {
   list-style-type: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   padding: 10px 0 10px 0;
 }
-/* line 536, ../../sass/style.scss */
+/* line 537, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li span {
   font-size: 1.5em;
   vertical-align: middle;
   line-height: 1.3em;
 }
-/* line 543, ../../sass/style.scss */
+/* line 544, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 550, ../../sass/style.scss */
+/* line 551, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 513, ../../sass/style.scss */
+  /* line 514, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 560, ../../sass/style.scss */
+/* line 561, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
 }
-/* line 563, ../../sass/style.scss */
+/* line 564, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 568, ../../sass/style.scss */
+/* line 569, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 575, ../../sass/style.scss */
+/* line 576, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid #bdbdbd;
 }
-/* line 580, ../../sass/style.scss */
+/* line 581, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -594,79 +595,84 @@ li {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 589, ../../sass/style.scss */
+/* line 590, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 596, ../../sass/style.scss */
+/* line 597, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 560, ../../sass/style.scss */
+  /* line 561, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 @media only screen and (min-width: 950px) {
-  /* line 560, ../../sass/style.scss */
+  /* line 561, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 611, ../../sass/style.scss */
+/* line 612, ../../sass/style.scss */
 .full-container {
   background-color: black;
   min-height: 100%;
 }
 
-/* line 616, ../../sass/style.scss */
+/* line 617, ../../sass/style.scss */
+.contributions-graph {
+  height: 500px;
+}
+
+/* line 621, ../../sass/style.scss */
+path {
+  stroke: steelblue;
+  stroke-width: 2;
+  fill: none;
+}
+
+/* line 628, ../../sass/style.scss */
+.axis path,
+.axis line {
+  fill: none;
+  stroke: grey;
+  stroke-width: 1;
+  shape-rendering: crispEdges;
+}
+
+/* line 635, ../../sass/style.scss */
 .footer-section {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 621, ../../sass/style.scss */
+/* line 640, ../../sass/style.scss */
 .footer-section h1 {
   text-align: center;
   padding-top: 20px;
   margin: 0;
 }
-/* line 627, ../../sass/style.scss */
+/* line 646, ../../sass/style.scss */
 .footer-section h2 {
   padding: 0 20px 0 20px;
   text-align: center;
 }
-/* line 632, ../../sass/style.scss */
+/* line 651, ../../sass/style.scss */
 .footer-section p {
   padding: 0 20px 20px 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 637, ../../sass/style.scss */
+  /* line 656, ../../sass/style.scss */
   .footer-section h2 {
     padding: 30px 100px 0 100px;
     text-align: left;
   }
-  /* line 642, ../../sass/style.scss */
+  /* line 661, ../../sass/style.scss */
   .footer-section p {
     padding: 0 100px 100px 100px;
   }
-}
-
-.contributions-graph{height:500px;}
-
-path { 
-    stroke: steelblue;
-    stroke-width: 2;
-    fill: none;
-}
-
-.axis path,
-.axis line {
-    fill: none;
-    stroke: grey;
-    stroke-width: 1;
-    shape-rendering: crispEdges;
 }
