--- a/app/css/style.css
+++ b/app/css/style.css
@@ -314,11 +314,6 @@ li {
   .desktop-left-section .bills-sponsored-section-desktop li:last-child {
     border-bottom: none;
   }
-  /* line 311, ../../sass/style.scss */
-  .desktop-left-section .bills-sponsored-section-desktop li:hover {
-    cursor: pointer;
-    background-color: #7E7C7D;
-  }
 }
 /* line 319, ../../sass/style.scss */
 .desktop-left-section .candidate-list-section-desktop {
@@ -456,7 +451,7 @@ li {
 @media only screen and (min-width: 950px) {
   /* line 444, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
-    width: 700px;
+    width: 400px;
     margin: 0 auto;
   }
 }
@@ -487,21 +482,16 @@ li {
 .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
   width: 100%;
   margin: 0 auto;
+  width: 400px;
 }
-@media only screen and (min-width: 950px) {
-  /* line 481, ../../sass/style.scss */
-  .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
-    width: 700px;
-  }
-}
-/* line 492, ../../sass/style.scss */
+/* line 490, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: #7E7C7D;
   padding: 20px;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 492, ../../sass/style.scss */
+  /* line 490, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
     border-left: 1px solid rgba(0, 0, 0, 0.5);
@@ -509,85 +499,81 @@ li {
     border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   }
 }
-/* line 505, ../../sass/style.scss */
+/* line 503, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   padding: 30px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 505, ../../sass/style.scss */
+  /* line 503, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 514, ../../sass/style.scss */
+/* line 512, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: #7E7C7D;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
-/* line 518, ../../sass/style.scss */
+/* line 516, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   margin: 0;
 }
-/* line 525, ../../sass/style.scss */
+/* line 523, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile ul {
   margin: 0 auto;
   font-size: 1em;
   background-color: #bdbdbd;
   text-align: center;
 }
-/* line 532, ../../sass/style.scss */
+/* line 530, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li {
   list-style-type: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
   padding: 10px 0 10px 0;
 }
-/* line 537, ../../sass/style.scss */
+/* line 535, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li span {
   font-size: 1.5em;
   vertical-align: middle;
   line-height: 1.3em;
 }
-/* line 544, ../../sass/style.scss */
+/* line 542, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 551, ../../sass/style.scss */
-.desktop-right-section .bills-sponsored-section-mobile a:hover li {
-  background-color: darkgray;
-}
 @media only screen and (min-width: 950px) {
-  /* line 514, ../../sass/style.scss */
+  /* line 512, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 561, ../../sass/style.scss */
+/* line 559, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
 }
-/* line 564, ../../sass/style.scss */
+/* line 562, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 569, ../../sass/style.scss */
+/* line 567, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 576, ../../sass/style.scss */
+/* line 574, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid #bdbdbd;
 }
-/* line 581, ../../sass/style.scss */
+/* line 579, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -595,47 +581,43 @@ li {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 590, ../../sass/style.scss */
+/* line 588, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 597, ../../sass/style.scss */
-.desktop-right-section .candidate-list-section-mobile a:hover li {
-  background-color: darkgray;
-}
 @media only screen and (min-width: 950px) {
-  /* line 561, ../../sass/style.scss */
+  /* line 559, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 @media only screen and (min-width: 950px) {
-  /* line 561, ../../sass/style.scss */
+  /* line 559, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 612, ../../sass/style.scss */
+/* line 610, ../../sass/style.scss */
 .full-container {
   background-color: black;
   min-height: 100%;
 }
 
-/* line 617, ../../sass/style.scss */
+/* line 615, ../../sass/style.scss */
 .contributions-graph {
   height: 500px;
 }
 
-/* line 621, ../../sass/style.scss */
+/* line 619, ../../sass/style.scss */
 path {
   stroke: steelblue;
   stroke-width: 2;
   fill: none;
 }
 
-/* line 628, ../../sass/style.scss */
+/* line 626, ../../sass/style.scss */
 .axis path,
 .axis line {
   fill: none;
@@ -644,34 +626,34 @@ path {
   shape-rendering: crispEdges;
 }
 
-/* line 635, ../../sass/style.scss */
+/* line 633, ../../sass/style.scss */
 .footer-section {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 640, ../../sass/style.scss */
+/* line 638, ../../sass/style.scss */
 .footer-section h1 {
   text-align: center;
   padding-top: 20px;
   margin: 0;
 }
-/* line 646, ../../sass/style.scss */
+/* line 644, ../../sass/style.scss */
 .footer-section h2 {
   padding: 0 20px 0 20px;
   text-align: center;
 }
-/* line 651, ../../sass/style.scss */
+/* line 649, ../../sass/style.scss */
 .footer-section p {
   padding: 0 20px 20px 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 656, ../../sass/style.scss */
+  /* line 654, ../../sass/style.scss */
   .footer-section h2 {
     padding: 30px 100px 0 100px;
-    text-align: left;
+    text-align: center;
   }
-  /* line 661, ../../sass/style.scss */
+  /* line 659, ../../sass/style.scss */
   .footer-section p {
     padding: 0 100px 100px 100px;
   }
