--- a/sass/style.scss
+++ b/sass/style.scss
@@ -59,7 +59,7 @@ li {
     width: 100%;
 
 
-    @media only screen and (min-width: 950px) {
+    @media only screen and (min-width: 1200px) {
         padding: 0 0 50px 0 !important;
         width: 950px;
         margin: 0 auto !important;
@@ -83,7 +83,7 @@ li {
         font-size: 4.5em;
         width: 61px;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             width: 90px;
         }
 
@@ -104,7 +104,7 @@ li {
             font-weight: thin;
         }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             width: 750px;
         }
 
@@ -116,7 +116,7 @@ li {
         font-size: 4.5em;
         width: 61px;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             width: 90px;
         }
 
@@ -155,7 +155,7 @@ li {
 .desktop-left-section {
     height: 100%;
 
-    @media only screen and (min-width: 950px) {
+    @media only screen and (min-width: 1200px) {
         float: left;
         width: 250px;
     }
@@ -177,7 +177,7 @@ li {
 
         }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             text-align: left;
 
             h1 {
@@ -196,7 +196,7 @@ li {
         display: none;
 
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             float: left;
             width: 80%;
             display: block;
@@ -252,7 +252,7 @@ li {
         display: none;
         margin-bottom: 20px;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             float: left;
             width: 80%;
             display: block;
@@ -262,7 +262,7 @@ li {
     .bills-sponsored-section-desktop {
         display: none;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             float: left;
             width: 80%;
             display: block;
@@ -319,7 +319,7 @@ li {
     .candidate-list-section-desktop {
         display: none;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             float: left;
             width: 80%;
             display: block;
@@ -372,7 +372,7 @@ li {
 .desktop-right-section {
     height: 100%;
 
-    @media only screen and (min-width: 950px) {
+    @media only screen and (min-width: 1200px) {
         display: inline-block;
         float: right;
         width: 700px;
@@ -392,7 +392,7 @@ li {
             border-bottom: 1px solid rgba(0,0,0,.5);
         }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             text-align: left;
             margin-bottom: 40px;
             -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
@@ -402,13 +402,14 @@ li {
 
         .contributions-graph-section {
             height: 600px;
+            width: 400px;
 
             .contributions-graph {
                 width: 100%;
                 height: 500px;
                 margin: 0 auto;
 
-                @media only screen and (min-width: 950px) {
+                @media only screen and (min-width: 1200px) {
                     width: 700px;
                 }
             }
@@ -429,7 +430,7 @@ li {
 
         }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             text-align: left;
             border: 1px solid rgba(0,0,0,.5);
             -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
@@ -446,7 +447,7 @@ li {
                 height: 400px;
                 margin: 0 auto;
 
-                @media only screen and (min-width: 950px) {
+                @media only screen and (min-width: 1200px) {
                     width: 400px;
                     margin: 0 auto;
                 }
@@ -467,7 +468,7 @@ li {
 
         }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             text-align: left;
             border: 1px solid rgba(0,0,0,.5);
             -webkit-box-shadow: 1px 0px 20px 5px rgba(0, 0, 0, 0.3);
@@ -492,7 +493,7 @@ li {
         padding: 20px;
         display: none;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             display: block;
             border-left: 1px solid rgba(0,0,0,.5);
             border-right: 1px solid rgba(0,0,0,.5);
@@ -503,7 +504,7 @@ li {
     .bill-description-mobile {
         padding: 30px;
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             display: none;
         }
 
@@ -551,7 +552,7 @@ li {
         //     }
         // }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             display: none;
         }
     }
@@ -597,11 +598,11 @@ li {
         //     }
         // }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             display: none;
         }
 
-        @media only screen and (min-width: 950px) {
+        @media only screen and (min-width: 1200px) {
             display: none;
         }
     }
@@ -650,7 +651,7 @@ path {
         padding: 0 20px 20px 20px;
     }
 
-    @media only screen and (min-width: 950px) {
+    @media only screen and (min-width: 1200px) {
         h2 {
             padding: 30px 100px 0 100px;
             text-align: center;
